--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
   </head>
   <body>
 
@@ -9,5 +9,7 @@
 
     <p>This is my first website</p>
 
+	<button>lagoonykeeper</button>
+	<a href="#" class="button15">кнопка</a>
   </body>
 </html>		
